--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -48,7 +48,7 @@
             </div>
           </div>
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
-            <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here account the user should be associated with">Account</label>
+            <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here account the user should be associated with">Accounts</label>
             <div class="col-sm-10">
               <ui-select ng-show="!_loading && companies.length>0" multiple theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="model.companyId" id="company" on-select="onAccountSelect($model)">
                 <ui-select-match placeholder="Add account...">{{$item.companyName}}</ui-select-match>
@@ -108,7 +108,7 @@
                                       createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
             <div class="col-sm-10">
-              <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
+              <textarea id="comment" placeholder="Comment (300 characters max)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
               </textarea>
             </div>
           </div>
