--- a/code/parts/apps/new.html
+++ b/code/parts/apps/new.html
@@ -22,10 +22,11 @@
       <div class="panel-body">
         <form name="createForm" class="form-horizontal" novalidate>
           <div class="form-group" ng-class="{'has-error': createForm.app_name.$invalid && createForm.app_name.$dirty}">
-            <label for="app_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter App name to register">App Name *
+            <label for="app_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter a name for the app to be registered (50 characters max)">App Name *
             </label>
             <div class="col-sm-10">
-              <input type="text" name="app_name" class="form-control" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name" placeholder="App name (for example, 'MyCoolApp')" required>
+              <input type="text" name="app_name" class="form-control" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name" placeholder="App name (for example, 'MyCoolApp')"
+                ng-pattern="/^[A-Za-z0-9 -]+$/" required>
               <div class="error-messages" ng-messages="createForm.app_name.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -68,9 +69,9 @@
           </div>
 -->
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
-            <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
+            <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the app (300 characters max)">Comment</label>
             <div class="col-sm-10">
-              <textarea id="comment" placeholder="Comment (max 300 symbol)" ng-maxlength="300" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
+              <textarea id="comment" placeholder="Comment" ng-maxlength="300" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
               </textarea>
               <div class="error-messages" ng-messages="createForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
