--- a/code/parts/shared/error-messages.html
+++ b/code/parts/shared/error-messages.html
@@ -1,5 +1,6 @@
-<div ng-message="required" class="alert-text alert-text--required">You did not enter a field</div>
-<div ng-message="minlength" class="alert-text alert-text--minlength">Your field is too short</div>
-<div ng-message="maxlength" class="alert-text alert-text--maxlength">Your field is too long</div>
-<div ng-message="min" class="alert-text alert-text--max">Your value is small </div>
-<div ng-message="max" class="alert-text alert-text--max">Your value is big</div>
+<div ng-message="required" class="alert-text alert-text--required">Please fill out the field</div>
+<div ng-message="pattern" class="alert-text alert-text--pattern">Special characters are not allowed</div>
+<div ng-message="minlength" class="alert-text alert-text--minlength">The specified value contains too few characters</div>
+<div ng-message="maxlength" class="alert-text alert-text--maxlength">The specified value contains too many characters</div>
+<div ng-message="min" class="alert-text alert-text--max">The specified value is too low</div>
+<div ng-message="max" class="alert-text alert-text--max">The specified value is too high</div>
