--- a/code/polymer/elements.html
+++ b/code/polymer/elements.html
@@ -1,20 +1,4 @@
-<html><head><!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
---><!--
-@license
-Copyright (c) 2014 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
---><meta charset="UTF-8"></head><body><div hidden="" by-vulcanize=""><script>(function () {
+<html><head><meta charset="UTF-8"></head><body><div hidden="" by-vulcanize=""><script>(function () {
 function resolve() {
 document.body.removeAttribute('unresolved');
 }
@@ -30,22 +14,30 @@ addEventListener('DOMContentLoaded', resolve);
 }());
 window.Polymer = {
 Settings: function () {
-var settings = window.Polymer || {};
+var user = window.Polymer || {};
 var parts = location.search.slice(1).split('&');
 for (var i = 0, o; i < parts.length && (o = parts[i]); i++) {
 o = o.split('=');
-o[0] && (settings[o[0]] = o[1] || true);
+o[0] && (user[o[0]] = o[1] || true);
 }
-settings.wantShadow = settings.dom === 'shadow';
-settings.hasShadow = Boolean(Element.prototype.createShadowRoot);
-settings.nativeShadow = settings.hasShadow && !window.ShadowDOMPolyfill;
-settings.useShadow = settings.wantShadow && settings.hasShadow;
-settings.hasNativeImports = Boolean('import' in document.createElement('link'));
-settings.useNativeImports = settings.hasNativeImports;
-settings.useNativeCustomElements = !window.CustomElements || window.CustomElements.useNative;
-settings.useNativeShadow = settings.useShadow && settings.nativeShadow;
-settings.usePolyfillProto = !settings.useNativeCustomElements && !Object.__proto__;
-return settings;
+var wantShadow = user.dom === 'shadow';
+var hasShadow = Boolean(Element.prototype.createShadowRoot);
+var nativeShadow = hasShadow && !window.ShadowDOMPolyfill;
+var useShadow = wantShadow && hasShadow;
+var hasNativeImports = Boolean('import' in document.createElement('link'));
+var useNativeImports = hasNativeImports;
+var useNativeCustomElements = !window.CustomElements || window.CustomElements.useNative;
+var usePolyfillProto = !useNativeCustomElements && !Object.__proto__;
+return {
+wantShadow: wantShadow,
+hasShadow: hasShadow,
+nativeShadow: nativeShadow,
+useShadow: useShadow,
+useNativeShadow: useShadow && nativeShadow,
+useNativeImports: useNativeImports,
+useNativeCustomElements: useNativeCustomElements,
+usePolyfillProto: usePolyfillProto
+};
 }()
 };
 (function () {
@@ -172,9 +164,6 @@ Polymer.RenderStatus._catchFirstRender();
 }
 Polymer.ImportStatus = Polymer.RenderStatus;
 Polymer.ImportStatus.whenLoaded = Polymer.ImportStatus.whenReady;
-(function () {
-'use strict';
-var settings = Polymer.Settings;
 Polymer.Base = {
 __isPolymerInstance__: true,
 _addFeature: function (feature) {
@@ -184,30 +173,13 @@ registerCallback: function () {
 this._desugarBehaviors();
 this._doBehavior('beforeRegister');
 this._registerFeatures();
-if (!settings.lazyRegister) {
-this.ensureRegisterFinished();
-}
+this._doBehavior('registered');
 },
 createdCallback: function () {
-if (!this.__hasRegisterFinished) {
-this._ensureRegisterFinished(this.__proto__);
-}
 Polymer.telemetry.instanceCount++;
 this.root = this;
 this._doBehavior('created');
 this._initFeatures();
-},
-ensureRegisterFinished: function () {
-this._ensureRegisterFinished(this);
-},
-_ensureRegisterFinished: function (proto) {
-if (proto.__hasRegisterFinished !== proto.is) {
-proto.__hasRegisterFinished = proto.is;
-if (proto._finishRegisterFeatures) {
-proto._finishRegisterFeatures();
-}
-proto._doBehavior('registered');
-}
 },
 attachedCallback: function () {
 var self = this;
@@ -287,7 +259,6 @@ Polymer.isInstance = function (obj) {
 return Boolean(obj && obj.__isPolymerInstance__);
 };
 Polymer.telemetry.instanceCount = 0;
-}());
 (function () {
 var modules = {};
 var lcModules = {};
@@ -669,7 +640,7 @@ return value != null ? value : undefined;
 }
 }
 });
-Polymer.version = '1.4.0';
+Polymer.version = '1.3.1';
 Polymer.Base._addFeature({
 _registerFeatures: function () {
 this._prepIs();
@@ -2021,11 +1992,7 @@ get localTarget() {
 return this.event.target;
 },
 get path() {
-var path = this.event.path;
-if (!Array.isArray(path)) {
-path = Array.prototype.slice.call(path);
-}
-return path;
+return this.event.path;
 }
 };
 } else {
@@ -4488,12 +4455,7 @@ if (prop.notify) {
 this._addPropertyEffect(p, 'notify', { event: Polymer.CaseMap.camelToDashCase(p) + '-changed' });
 }
 if (prop.reflectToAttribute) {
-var attr = Polymer.CaseMap.camelToDashCase(p);
-if (attr[0] === '-') {
-this._warn(this._logf('_addPropertyEffects', 'Property ' + p + ' cannot be reflected to attribute ' + attr + ' because "-" is not a valid starting attribute name. Use a lowercase first letter for the property instead.'));
-} else {
-this._addPropertyEffect(p, 'reflect', { attribute: attr });
-}
+this._addPropertyEffect(p, 'reflect', { attribute: Polymer.CaseMap.camelToDashCase(p) });
 }
 if (prop.readOnly) {
 Polymer.Bind.ensurePropertyEffects(this, p);
@@ -4576,9 +4538,6 @@ var part = note.parts[i];
 if (part.signature) {
 this._addAnnotatedComputationEffect(note, part, index);
 } else if (!part.literal) {
-if (note.kind === 'attribute' && note.name[0] === '-') {
-this._warn(this._logf('_addAnnotationEffect', 'Cannot set attribute ' + note.name + ' because "-" is not a valid attribute starting character'));
-} else {
 this._addPropertyEffect(part.model, 'annotation', {
 kind: note.kind,
 index: index,
@@ -4591,7 +4550,6 @@ event: part.event,
 customEvent: part.customEvent,
 negate: part.negate
 });
-}
 }
 }
 },
@@ -5363,29 +5321,19 @@ this.forEachRule(r, styleRuleCallback, keyframesRuleCallback);
 }
 }
 },
-applyCss: function (cssText, moniker, target, contextNode) {
-var style = this.createScopeStyle(cssText, moniker);
-target = target || document.head;
-var after = contextNode && contextNode.nextSibling || target.firstChild;
-this.__lastHeadApplyNode = style;
-return target.insertBefore(style, after);
-},
-createScopeStyle: function (cssText, moniker) {
+applyCss: function (cssText, moniker, target, afterNode) {
 var style = document.createElement('style');
 if (moniker) {
 style.setAttribute('scope', moniker);
 }
 style.textContent = cssText;
+target = target || document.head;
+if (!afterNode) {
+var n$ = target.querySelectorAll('style[scope]');
+afterNode = n$[n$.length - 1];
+}
+target.insertBefore(style, afterNode && afterNode.nextSibling || target.firstChild);
 return style;
-},
-__lastHeadApplyNode: null,
-applyStylePlaceHolder: function (moniker) {
-var placeHolder = document.createComment(' Shady DOM styles for ' + moniker + ' ');
-var after = this.__lastHeadApplyNode ? this.__lastHeadApplyNode.nextSibling : null;
-var scope = document.head;
-scope.insertBefore(placeHolder, after || scope.firstChild);
-this.__lastHeadApplyNode = placeHolder;
-return placeHolder;
 },
 cssFromModules: function (moduleIds, warnIfNotFound) {
 var modules = moduleIds.trim().split(' ');
@@ -5703,20 +5651,20 @@ styleTransformer.element(element, this.is, this._scopeCssViaAttr);
 prepElement.call(this, element);
 },
 _prepStyles: function () {
-if (!nativeShadow) {
-this._scopeStyle = styleUtil.applyStylePlaceHolder(this.is);
-}
-},
-_prepShimStyles: function () {
-if (this._template) {
 if (this._encapsulateStyle === undefined) {
-this._encapsulateStyle = !nativeShadow;
+this._encapsulateStyle = !nativeShadow && Boolean(this._template);
 }
+if (this._template) {
 this._styles = this._collectStyles();
 var cssText = styleTransformer.elementStyles(this);
 this._prepStyleProperties();
-if (!this._needsStyleProperties() && this._styles.length) {
-styleUtil.applyCss(cssText, this.is, nativeShadow ? this._template.content : null, this._scopeStyle);
+var needsStatic = this._styles.length && !this._needsStyleProperties();
+if (needsStatic || !nativeShadow) {
+cssText = needsStatic ? cssText : ' ';
+var style = styleUtil.applyCss(cssText, this.is, nativeShadow ? this._template.content : null);
+if (!nativeShadow) {
+this._scopeStyle = style;
+}
 }
 } else {
 this._styles = [];
@@ -6359,11 +6307,8 @@ Polymer.Base._addFeature({
 _registerFeatures: function () {
 this._prepIs();
 this._prepConstructor();
-this._prepStyles();
-},
-_finishRegisterFeatures: function () {
 this._prepTemplate();
-this._prepShimStyles();
+this._prepStyles();
 this._prepAnnotations();
 this._prepEffects();
 this._prepBehaviors();
@@ -7942,15 +7887,6 @@ this.fire('dom-change');
       },
 
       /**
-       * Default fallback if the selection based on selected with `attrForSelected`
-       * is not found.
-       */
-      fallbackSelection: {
-        type: String,
-        value: null
-      },
-
-      /**
        * The list of items from which a selection can be made.
        */
       items: {
@@ -7980,8 +7916,7 @@ this.fire('dom-change');
 
     observers: [
       '_updateAttrForSelected(attrForSelected)',
-      '_updateSelected(selected)',
-      '_checkFallback(fallbackSelection)'
+      '_updateSelected(selected)'
     ],
 
     created: function() {
@@ -8048,15 +7983,6 @@ this.fire('dom-change');
     },
 
     /**
-     * Selects the item at the given index.
-     *
-     * @method selectIndex
-     */
-    selectIndex: function(index) {
-      this.select(this._indexToValue(index));
-    },
-
-    /**
      * Force a synchronous update of the `items` property.
      *
      * NOTE: Consider listening for the `iron-items-changed` event to respond to
@@ -8074,12 +8000,6 @@ this.fire('dom-change');
 
     get _shouldUpdateSelection() {
       return this.selected != null;
-    },
-
-    _checkFallback: function() {
-      if (this._shouldUpdateSelection) {
-        this._updateSelected();
-      }
     },
 
     _addListener: function(eventName) {
@@ -8103,7 +8023,7 @@ this.fire('dom-change');
 
     _updateAttrForSelected: function() {
       if (this._shouldUpdateSelection) {
-        this.selected = this._indexToValue(this.indexOf(this.selectedItem));
+        this.selected = this._indexToValue(this.indexOf(this.selectedItem));        
       }
     },
 
@@ -8113,11 +8033,6 @@ this.fire('dom-change');
 
     _selectSelected: function(selected) {
       this._selection.select(this._valueToItem(this.selected));
-      // Check for items, since this array is populated only when attached
-      // Since Number(0) is falsy, explicitly check for undefined
-      if (this.fallbackSelection && this.items.length && (this._selection.get() === undefined)) {
-        this.selected = this.fallbackSelection;
-      }
     },
 
     _filterItem: function(node) {
@@ -8248,7 +8163,7 @@ this.fire('dom-change');
     },
 
     observers: [
-      '_updateSelected(selectedValues.splices)'
+      '_updateSelected(selectedValues)'
     ],
 
     /**
@@ -8284,7 +8199,7 @@ this.fire('dom-change');
         Polymer.IronSelectableBehavior._updateAttrForSelected.apply(this);
       } else if (this._shouldUpdateSelection) {
         this.selectedValues = this.selectedItems.map(function(selectedItem) {
-          return this._indexToValue(this.indexOf(selectedItem));
+          return this._indexToValue(this.indexOf(selectedItem));        
         }, this).filter(function(unfilteredValue) {
           return unfilteredValue != null;
         }, this);
@@ -8307,13 +8222,6 @@ this.fire('dom-change');
         // select only those not selected yet
         for (var i = 0; i < selectedItems.length; i++) {
           this._selection.setItemSelected(selectedItems[i], true);
-        }
-        // Check for items, since this array is populated only when attached
-        if (this.fallbackSelection && this.items.length && !this._selection.get().length) {
-          var fallback = this._valueToItem(this.fallbackSelection);
-          if (fallback) {
-            this.selectedValues = [this.fallbackSelection];
-          }
         }
       } else {
         this._selection.clear();
@@ -8338,6 +8246,7 @@ this.fire('dom-change');
       } else {
         this.splice('selectedValues',i,1);
       }
+      this._selection.setItemSelected(this._valueToItem(value), unselected);
     },
 
     _valuesToItems: function(values) {
@@ -8379,21 +8288,6 @@ this.fire('dom-change');
         <div name="bar">Bar</div>
         <div name="zot">Zot</div>
       </iron-selector>
-
-  You can specify a default fallback with `fallbackSelection` in case the `selected` attribute does
-  not match the `attrForSelected` attribute of any elements.
-
-  Example:
-
-        <iron-selector attr-for-selected="name" selected="non-existing"
-                       fallback-selection="default">
-          <div name="foo">Foo</div>
-          <div name="bar">Bar</div>
-          <div name="default">Default</div>
-        </iron-selector>
-
-  Note: When the selector is multi, the selection will set to `fallbackSelection` iff
-  the number of matching elements is zero.
 
   `iron-selector` is not styled. Use the `iron-selected` CSS class to style the selected element.
 
@@ -8979,9 +8873,6 @@ this.fire('dom-change');
            * The CSS selector for the element that should receive focus when the drawer is open.
            * By default, when the drawer opens, it focuses the first tabbable element. That is,
            * the first element that can receive focus.
-           *
-           * To disable this behavior, you can set `drawerFocusSelector` to `null` or an empty string.
-           *
            */
           drawerFocusSelector: {
             type: String,
@@ -9278,32 +9169,28 @@ this.fire('dom-change');
 
         _getAutoFocusedNode: function() {
           var drawerContent = this._getDrawerContent();
-
-          return this.drawerFocusSelector ? 
-              Polymer.dom(drawerContent).querySelector(this.drawerFocusSelector) || drawerContent : null;
+          return Polymer.dom(drawerContent).querySelector(this.drawerFocusSelector) || drawerContent;
         },
 
         _toggleFocusListener: function(selected) {
           if (selected === 'drawer') {
-            this.addEventListener('focus', this._boundFocusListener, true);
+            document.addEventListener('focus', this._boundFocusListener, true);
           } else {
-            this.removeEventListener('focus', this._boundFocusListener, true);
+            document.removeEventListener('focus', this._boundFocusListener, true);
           }
         },
 
         _didFocus: function(event) {
-          var autoFocusedNode = this._getAutoFocusedNode();
-          if (!autoFocusedNode) {
-            return;
-          }
-
           var path = Polymer.dom(event).path;
           var focusedChild = path[0];
           var drawerContent = this._getDrawerContent();
-          var focusedChildCameFromDrawer = path.indexOf(drawerContent) !== -1;
+          var focusedChildCameFromDrawer = false;
+          var autoFocusedNode = this._getAutoFocusedNode();
 
-          if (!focusedChildCameFromDrawer) {
-            event.stopPropagation();
+          while (!focusedChildCameFromDrawer && path[0]) {
+            focusedChildCameFromDrawer = path.shift() === drawerContent;
+          }
+          if (!focusedChildCameFromDrawer && autoFocusedNode) {
             autoFocusedNode.focus();
           }
         },
@@ -9673,9 +9560,7 @@ this.fire('dom-change');
 
 <dom-module id="paper-header-panel" assetpath="../../bower_components/paper-header-panel/">
 
-  
-
-  <template><style>
+  <style>
 /**
 @license
 Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
@@ -9797,6 +9682,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 }
 
 </style>
+
+  <template>
     <content id="headerContent" select="paper-toolbar, .paper-header"></content>
 
     <div id="mainPanel">
